build: fix dockerfile